--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: php
-        image: hevelop/ak-php
+        image: hevelop/ak-php:1.2
         env:
         - name: COMPOSER_HOME
           value: /home/docker/.composer
