--- a/templates/alb-ingress-controller.yaml
+++ b/templates/alb-ingress-controller.yaml
@@ -37,21 +37,25 @@ spec:
             # Setting the ingress-class flag below ensures that only ingress resources with the
             # annotation kubernetes.io/ingress.class: "alb" are respected by the controller. You may
             # choose any class you'd like for this controller to respect.
-            - --ingress-class=alb
+            - --ingress-class={{ .Values.ingress.class }}
 
             # Name of your cluster. Used when naming resources created
             # by the ALB Ingress Controller, providing distinction between
             # clusters.
-            - --cluster-name=devCluster
+            - --cluster-name={{ .Values.ingress.clusterName }}
 
             # AWS VPC ID this ingress controller will use to create AWS resources.
             # If unspecified, it will be discovered from ec2metadata.
-            # - --aws-vpc-id=vpc-xxxxxx
+            {{- if .Values.ingress.awsVpcId }}
+            - --aws-vpc-id={{ .Values.ingress.awsVpcId }}
+            {{- end }}
 
             # AWS region this ingress controller will operate in. 
             # If unspecified, it will be discovered from ec2metadata.
             # List of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
-            # - --aws-region=us-west-1
+            {{- if .Values.ingress.awsRegion }}
+            - --aws-region={{ .Values.ingress.awsRegion }}
+            {{- end }}
 
             # Enables logging on all outbound requests sent to the AWS API.
             # If logging is desired, set to true.
@@ -63,14 +67,18 @@ spec:
             # AWS key id for authenticating with the AWS API.
             # This is only here for examples. It's recommended you instead use
             # a project like kube2iam for granting access.
-            #- name: AWS_ACCESS_KEY_ID
-            #  value: KEYVALUE
+            {{- if .Values.ingress.awsAccessKeyId }}
+            - name: {{ .Values.ingress.awsAccessKeyId }}
+              value: KEYVALUE
+            {{- end }}
             
             # AWS key secret for authenticating with the AWS API.
             # This is only here for examples. It's recommended you instead use
             # a project like kube2iam for granting access.
-            #- name: AWS_SECRET_ACCESS_KEY
-            #  value: SECRETVALUE
+            {{- if .Values.ingress.awsSecretAccessKey }}
+            - name: {{ .Values.ingress.awsSecretAccessKey }}
+              value: SECRETVALUE
+            {{- end }}
           # Repository location of the ALB Ingress Controller.
           image: docker.io/amazon/aws-alb-ingress-controller:v1.1.0
           imagePullPolicy: Always
