--- a/templates/httpd-service.yaml
+++ b/templates/httpd-service.yaml
@@ -4,14 +4,11 @@ metadata:
   name: httpd
   labels:
     tier: frontend
-  {{- if .Values.ingress.enabled }}
-  annotations:
-    kubernetes.io/ingress.class: {{ .Values.ingress.class }}
-  {{- end }}
 spec:
   selector:
     app: httpd
     tier: frontend
+  type: ClusterIP
   ports:
   - name: http
     protocol: TCP
