--- a/templates/httpd-ingress.yaml
+++ b/templates/httpd-ingress.yaml
@@ -7,6 +7,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: {{ .Values.ingress.class }}
     alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/tags: {{ .Values.ingress.tags }}
 spec:
   rules:
     - host: {{ .Values.ingress.host }}
