--- a/templates/httpd-ingress.yaml
+++ b/templates/httpd-ingress.yaml
@@ -8,6 +8,8 @@ metadata:
     kubernetes.io/ingress.class: {{ .Values.ingress.class }}
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/tags: {{ .Values.ingress.tags }}
+    alb.ingress.kubernetes.io/listen-ports: {{ .Values.ingress.listenPorts }}
+    alb.ingress.kubernetes.io/ip-address-type: {{ .Values.ingress.addressType }}
 spec:
   rules:
     - host: {{ .Values.ingress.host }}
