--- a/values.yaml
+++ b/values.yaml
@@ -9,6 +9,8 @@ ingress:
   clusterName: default
   host: ""
   tags: "app=akeneo"
-  listenPorts: "[{\"HTTP\": 80}]"
+  listenPorts:
+    HTTP: 80
+    HTTPS: 443
   addressType: ipv4
   
