--- a/templates/httpd-ingress.yaml
+++ b/templates/httpd-ingress.yaml
@@ -8,7 +8,9 @@ metadata:
     kubernetes.io/ingress.class: {{ .Values.ingress.class }}
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/tags: {{ .Values.ingress.tags }}
+    {{- if .Values.ingress.listenPorts }}
     alb.ingress.kubernetes.io/listen-ports: {{ .Values.ingress.listenPorts }}
+    {{- end }}
     alb.ingress.kubernetes.io/ip-address-type: {{ .Values.ingress.addressType }}
 spec:
   rules:
@@ -18,5 +20,5 @@ spec:
           - path: /
             backend:
               serviceName: httpd
-              servicePort: http
+              servicePort: 80
 {{- end }}
