try to workaround listen port format issue

--- a/templates/httpd-ingress.yaml
+++ b/templates/httpd-ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     # {{- if .Values.ingress.listenPorts }}
     # alb.ingress.kubernetes.io/listen-ports: {{ .Values.ingress.listenPorts }}
     # {{- end }}
-    alb.ingress.kubernetes.io/listen-ports: `[{"HTTP": 80}]`
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
     alb.ingress.kubernetes.io/ip-address-type: {{ .Values.ingress.addressType }}
 spec:
   rules:
