--- a/templates/httpd-service.yaml
+++ b/templates/httpd-service.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     app: httpd
     tier: frontend
-  type: LoadBalancer
+  type: NodePort
   ports:
   - name: http
     protocol: TCP
