--- a/values.yaml
+++ b/values.yaml
@@ -11,4 +11,20 @@ ingress:
   host: ""
   tags: "app=akeneo"
   addressType: ipv4
+
+configmap:
+  akeneo:
+    parameters:
+      database_driver: pdo_mysql
+      database_host: localhost
+      database_port: 3306
+      database_name: akeneo_pim
+      database_user: akeneo_pim
+      database_password: akeneo_pim
+      locale: en
+      secret: ThisTokenIsNotSoSecretChangeIt
+      product_index_name: akeneo_pim_product
+      product_model_index_name: akeneo_pim_product_model
+      product_and_product_model_index_name: akeneo_pim_product_and_product_model
+      index_hosts: ''
   
