configmap akeneo parameters format fix

--- a/templates/akeneo-parameters-configmap.yaml
+++ b/templates/akeneo-parameters-configmap.yaml
@@ -6,7 +6,7 @@ metadata:
     name: akeneo-parameters-yml
 data:
   parameters.yml: |
-    parameters: |-
+    parameters:
      {{- range $key, $value := .Values.akeneo.parameters }}
      {{ $key }}: {{ $value | quote }}
      {{- end }}
