--- a/templates/alb-ingress-controller.yaml
+++ b/templates/alb-ingress-controller.yaml
@@ -6,8 +6,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: alb-ingress-controller
-  name: alb-ingress-controller
+    app: {{ template "akeneo.fullname" . }}-alb-ingress-controller
+  name: {{ template "akeneo.fullname" . }}-alb-ingress-controller
   # Namespace the ALB Ingress Controller should run in. Does not impact which
   # namespaces it's able to resolve ingress resource for. For limiting ingress
   # namespace scope, see --watch-namespace.
@@ -16,7 +16,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: alb-ingress-controller
+      app: {{ template "akeneo.fullname" . }}-alb-ingress-controller
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -26,7 +26,7 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        app: alb-ingress-controller
+        app: {{ template "akeneo.fullname" . }}-alb-ingress-controller
     spec:
       containers:
         - args:
@@ -78,6 +78,6 @@ spec:
       restartPolicy: Always
       securityContext: {}
       terminationGracePeriodSeconds: 30
-      serviceAccountName: alb-ingress
-      serviceAccount: alb-ingress
+      serviceAccountName: {{ template "akeneo.fullname" . }}-alb-ingress
+      serviceAccount: {{ template "akeneo.fullname" . }}-alb-ingress
 {{- end }}
