--- a/templates/alb-ingress-secrets.yaml
+++ b/templates/alb-ingress-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: alb-ingress-secrets
+  name: {{ template "akeneo.fullname" . }}-alb-ingress-secrets
 stringData:
   # AWS key id for authenticating with the AWS API.
   # This is only here for examples. It's recommended you instead use
