--- a/templates/akeneo-parameters-configmap.yaml
+++ b/templates/akeneo-parameters-configmap.yaml
@@ -1,9 +1,9 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: akeneo-parameters-yml
+  name: {{ template "akeneo.fullname" . }}-akeneo-parameters-yml
   labels:
-    name: akeneo-parameters-yml
+    name: {{ template "akeneo.fullname" . }}-akeneo-parameters-yml
 data:
   parameters.yml: |
     parameters:
