--- a/templates/httpd-ingress.yaml
+++ b/templates/httpd-ingress.yaml
@@ -2,8 +2,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: httpd
-  namespace: {{ .Values.ingress.namespace }}
+  name: {{ template "akeneo.fullname" . }}-httpd
   annotations:
     kubernetes.io/ingress.class: {{ .Values.ingress.class }}
     alb.ingress.kubernetes.io/scheme: internet-facing
@@ -17,7 +16,7 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: /
+          - path: /*
             backend:
               serviceName: httpd
               servicePort: 80
