--- a/templates/rbac-role.yaml
+++ b/templates/rbac-role.yaml
@@ -3,8 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app: alb-ingress-controller
-  name: alb-ingress-controller
+    app: {{ template "akeneo.fullname" . }}-alb-ingress-controller
+  name: {{ template "akeneo.fullname" . }}-alb-ingress-controller
 rules:
   - apiGroups:
       - ""
@@ -41,22 +41,22 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app: alb-ingress-controller
-  name: alb-ingress-controller
+    app: {{ template "akeneo.fullname" . }}-alb-ingress-controller
+  name: {{ template "akeneo.fullname" . }}-alb-ingress-controller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: alb-ingress-controller
+  name: {{ template "akeneo.fullname" . }}-alb-ingress-controller
 subjects:
   - kind: ServiceAccount
-    name: alb-ingress
+    name: {{ template "akeneo.fullname" . }}-alb-ingress
     namespace: {{ .Values.ingress.namespace }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app: alb-ingress-controller
-  name: alb-ingress
+    app: {{ template "akeneo.fullname" . }}-alb-ingress-controller
+  name: {{ template "akeneo.fullname" . }}-alb-ingress
   namespace: {{ .Values.ingress.namespace }}
 {{- end }}
