--- a/templates/httpd-ingress.yaml
+++ b/templates/httpd-ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ template "akeneo.fullname" . }}-httpd
+  name: {{ template "akeneo.fullname" . }}-ingress-httpd
   annotations:
     kubernetes.io/ingress.class: {{ .Values.ingress.class }}
     alb.ingress.kubernetes.io/scheme: internet-facing
@@ -18,6 +18,6 @@ spec:
         paths:
           - path: /*
             backend:
-              serviceName: httpd
+              serviceName: {{ template "akeneo.fullname" . }}-httpd
               servicePort: 80
 {{- end }}
