configmap httpd.conf vhost.conf

--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -16,9 +16,23 @@ spec:
         app: {{ template "akeneo.fullname" . }}-httpd
         tier: {{ template "akeneo.fullname" . }}-frontend
     spec:
+      volumes:
+        - name: vhost-conf
+          configMap:
+            name: {{ template "akeneo.fullname" . }}-vhost-conf
+        - name: httpd-conf
+          configMap:
+            name: {{ template "akeneo.fullname" . }}-httpd-conf
       containers:
       - name: httpd
         image: hevelop/ak-httpd:1.3
         ports:
         - containerPort: 80
+        volumeMounts:
+          - name: vhost-conf
+            mountPath: /usr/local/apache2/conf/vhost.conf
+            subPath: vhost.conf
+          - name: httpd-conf
+            mountPath: /usr/local/apache2/conf/httpd.conf
+            subPath: httpd.conf
       restartPolicy: Always
