--- a/templates/httpd-ingress.yaml
+++ b/templates/httpd-ingress.yaml
@@ -18,6 +18,6 @@ spec:
         paths:
           - path: /*
             backend:
-              serviceName: {{ template "akeneo.fullname" . }}-httpd
+              serviceName: {{ template "akeneo.fullname" . }}-service-httpd
               servicePort: 80
 {{- end }}
