--- a/templates/php-service.yaml
+++ b/templates/php-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "akeneo.fullname" . }}-php
+  name: {{ template "akeneo.fullname" . }}-service-php
   labels:
     tier: {{ template "akeneo.fullname" . }}-frontend
 spec:
