--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -25,7 +25,7 @@ spec:
             name: {{ template "akeneo.fullname" . }}-httpd-conf
       containers:
       - name: httpd
-        image: hevelop/ak-httpd:1.3
+        image: {{printf "%s:%s" .Values.images.httpd.repo .Values.images.httpd.tag -}}
         ports:
         - containerPort: 80
         volumeMounts:
