--- a/templates/akeneo-parameters-configmap.yaml
+++ b/templates/akeneo-parameters-configmap.yaml
@@ -1,12 +1,12 @@
-# kind: ConfigMap
-# apiVersion: v1
-# metadata:
-#   name: {{ template "akeneo.fullname" . }}-akeneo-parameters-yml
-#   labels:
-#     name: {{ template "akeneo.fullname" . }}-akeneo-parameters-yml
-# data:
-#   parameters.yml: |
-#     parameters:
-#      {{- range $key, $value := .Values.akeneo.parameters }}
-#      {{ $key }}: {{ $value | quote }}
-#      {{- end }}
+ kind: ConfigMap
+ apiVersion: v1
+ metadata:
+   name: {{ template "akeneo.fullname" . }}-akeneo-parameters-yml
+   labels:
+     name: {{ template "akeneo.fullname" . }}-akeneo-parameters-yml
+ data:
+   parameters.yml: |
+     parameters:
+      {{- range $key, $value := .Values.akeneo.parameters }}
+      {{ $key }}: {{ $value | quote }}
+      {{- end }}
