--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -16,6 +16,10 @@ spec:
         app: {{ template "akeneo.fullname" . }}-httpd
         tier: {{ template "akeneo.fullname" . }}-frontend
     spec:
+      {{- if .Values.imageCredentials.registry }}
+      imagePullSecrets:
+          - name: myregistrykey
+      {{- end }}
       volumes:
         - name: vhost-conf
           configMap:
