removed secrete helper template

--- a/templates/registry-secret.yaml
+++ b/templates/registry-secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: myregistrykey
 data:
-  .dockerconfigjson: {{ template "imagePullSecret" . }}
+  .dockerconfigjson: {{- printf "{\"auths\": {\"%s\": {\"auth\": \"%s\"}}}" .Values.imageCredentials.registry (printf "%s:%s" .Values.imageCredentials.username .Values.imageCredentials.password | b64enc) | b64enc }}
 type: kubernetes.io/dockerconfigjson
