--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         tier: {{ template "akeneo.fullname" . }}-frontend
     spec:
       imagePullSecrets:
-        - name: myregistrykey
+      - name: {{ .Values.imagePullSecrets | quote }}
       volumes:
         - name: akeneo-parameters
           configMap:
