--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -16,8 +16,10 @@ spec:
         app: {{ template "akeneo.fullname" . }}-httpd
         tier: {{ template "akeneo.fullname" . }}-frontend
     spec:
+      {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
       - name: {{ .Values.imagePullSecrets | quote }}
+      {{- end }}
       volumes:
         - name: vhost-conf
           configMap:
