--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -27,6 +27,11 @@ spec:
         - name: httpd-conf
           configMap:
             name: {{ template "akeneo.fullname" . }}-httpd-conf
+        {{- if .Values.efsProvisioner.enable }}
+        - name: efs
+            persistentVolumeClaim:
+              claimName: {{ template "akeneo.fullname" . }}-efs-pvc
+        {{- end }}
       containers:
       - name: httpd
         image: "{{ .Values.images.httpd.repo -}} : {{- .Values.images.httpd.tag }}"
@@ -39,4 +44,9 @@ spec:
           - name: httpd-conf
             mountPath: /usr/local/apache2/conf/httpd.conf
             subPath: httpd.conf
+          {{- if .Values.efsProvisioner.enable }}
+          - mountPath: /media
+            subPath: media
+            name: efs
+          {{- end }}
       restartPolicy: Always
