--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,4 +1,13 @@
 apiVersion: v1
 description: Akeneo Helm chart for Kubernetes
 name: akeneo
-version: 0.8.3
+version: 0.8.4
+sources:
+ - https://github.com/Hevelop/helm-chart-akeneo
+ - https://github.com/kubernetes-incubator/external-storage/tree/master/aws/efs
+ - https://github.com/mirror/busybox
+maintainers:
+ - name: etessari
+   email: enrico@hevelop.com
+ - name: bordeo
+   email: alex@hevelop.com
