--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         - name: httpd-conf
           configMap:
             name: {{ template "akeneo.fullname" . }}-httpd-conf
-        {{- if .Values.efsProvisioner.enable }}
+        {{- if .Values.efs.enable }}
         - name: efs
             persistentVolumeClaim:
               claimName: {{ template "akeneo.fullname" . }}-efs-pvc
@@ -44,7 +44,12 @@ spec:
           - name: httpd-conf
             mountPath: /usr/local/apache2/conf/httpd.conf
             subPath: httpd.conf
-          {{- if .Values.efsProvisioner.enable }}
+          {{- if .Values.efs.enable }}
+          {{- range $mountPath := .Values.efs.containerMountPaths }}
+          - mountPath: {{ $mountPath }}
+            subPath: {{ (trimPrefix "/" $mountPath) }}
+            name: efs
+          {{- end }}
           - mountPath: /media
             subPath: media
             name: efs
