--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         - name: akeneo-config-prod
           configMap:
             name: {{ template "akeneo.fullname" . }}-akeneo-config-prod-yml
-        {{- if .Values.efsProvisioner.enable }}
+        {{- if .Values.efs.enable }}
         - name: efs
             persistentVolumeClaim:
               claimName: {{ template "akeneo.fullname" . }}-efs-pvc
@@ -48,7 +48,7 @@ spec:
             - name: akeneo-config-prod
               mountPath: /srv/pim/app/config/config_prod.yml
               subPath: config_prod.yml
-            {{- if .Values.efsProvisioner.enable }}
+            {{- if .Values.efs.enable }}
             - mountPath: /media
               subPath: media
               name: efs       
