--- a/values.yaml
+++ b/values.yaml
@@ -2,12 +2,76 @@ nameOverride: null
 
 imagePullSecrets: null
 
-efsProvisioner:
- enabled: false
- efsProvisioner.awsRegion: null
- efsFileSystemId: null
- path: null
- provisionerName: null
+efs:
+  enabled: false
+  replicaCount: 1
+  revisionHistoryLimit: 10
+  image:
+    repository: quay.io/external_storage/efs-provisioner
+    tag: v2.1.0-k8s1.11
+    pullPolicy: IfNotPresent  
+  busyboxImage:
+    repository: gcr.io/google_containers/busybox
+    tag: 1.27
+    pullPolicy: IfNotPresent
+## Configure provisioner
+## https://github.com/kubernetes-incubator/external-storage/tree/master/aws/efs#deployment
+##
+  efsFileSystemId: fs-12345678
+  awsRegion: us-east-2
+  path: /
+  provisionerName: example.com/aws-efs
+  storageClass:
+    name: efs
+    isDefault: false
+    gidAllocate:
+      enabled: true
+      gidMin: 40000
+      gidMax: 50000
+    reclaimPolicy: Delete
+  containerMountPaths: {}
+    # - /media
+  ## Enable RBAC
+  ##
+  rbac:
+    # Specifies whether RBAC resources should be created
+    create: true
+
+  ## Create or use ServiceAccount
+  ##
+  serviceAccount:
+    # Specifies whether a ServiceAccount should be created
+    create: true
+    # The name of the ServiceAccount to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
+
+  ## Annotations to be added to deployment
+  ##
+  podAnnotations: {}
+    # iam.amazonaws.com/role: efs-provisioner-role
+
+  ## Node labels for pod assignment
+  ##
+  nodeSelector: {}
+
+  # Affinity for pod assignment
+  # Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+  affinity: {}
+
+  ## Configure resources
+  ##
+  resources: {}
+    # To specify resources, uncomment the following lines, adjust them as necessary,
+    # and remove the curly braces after 'resources:'.
+    # limits:
+    #  cpu: 200m
+    #  memory: 128Mi
+    # requests:
+    #  cpu: 100m
+    #  memory: 128Mi
+
+  priorityClassName: ""
  
 images:
  php:
