--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         - name: httpd-conf
           configMap:
             name: {{ template "akeneo.fullname" . }}-httpd-conf
-        {{- if .Values.efs.enable }}
+        {{- if .Values.efs.enabled }}
         - name: efs
             persistentVolumeClaim:
               claimName: {{ template "akeneo.fullname" . }}-efs-pvc
@@ -44,14 +44,11 @@ spec:
           - name: httpd-conf
             mountPath: /usr/local/apache2/conf/httpd.conf
             subPath: httpd.conf
-          {{- if .Values.efs.enable }}
+          {{- if .Values.efs.enabled }}
           {{- range $mountPath := .Values.efs.containerMountPaths }}
           - mountPath: {{ $mountPath }}
             subPath: {{ (trimPrefix "/" $mountPath) }}
             name: efs
           {{- end }}
-          - mountPath: /media
-            subPath: media
-            name: efs
           {{- end }}
       restartPolicy: Always
