add volume for container from efs

--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -45,9 +45,9 @@ spec:
             mountPath: /usr/local/apache2/conf/httpd.conf
             subPath: httpd.conf
           {{- if .Values.efs.enabled }}
-          {{- range $mountPath := .Values.efs.containerMountPaths }}
-          - mountPath: {{ $mountPath }}
-            subPath: {{ (trimPrefix "/" $mountPath) }}
+          {{- range $index, $val := .Values.efs.containerMountPaths }}
+          - mountPath: {{ $val }}
+            subPath: {{ (trimPrefix "/" $val) }}
             name: efs
           {{- end }}
           {{- end }}
