--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -1,3 +1,6 @@
+{{- if .Values.efs.enabled }}
+apiVersionssss: apps/v88888
+{{- end }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -29,8 +32,8 @@ spec:
             name: {{ template "akeneo.fullname" . }}-akeneo-config-prod-yml
         {{- if .Values.efs.enabled }}
         - name: efs
-            persistentVolumeClaim:
-              claimName: {{ template "akeneo.fullname" . }}-efs-pvc
+          persistentVolumeClaim:
+            claimName: {{ template "akeneo.fullname" . }}-efs-pvc
         {{- end }}
       containers:
         - name: php
