--- a/templates/alb-ingress-secrets.yaml
+++ b/templates/alb-ingress-secrets.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -16,3 +17,4 @@ stringData:
   {{- if .Values.ingress.awsSecretAccessKey }}
   AWS_SECRET_ACCESS_KEY: {{ .Values.ingress.awsSecretAccessKey }}
   {{- end }}
+{{- end }}
