--- a/templates/efs-serviceaccount.yaml
+++ b/templates/efs-serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.efs.enabled }}
+{{- if and (.Values.efs.enabled) (not .Values.efs.existingClaim) }}
 {{- if .Values.efs.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
