--- a/templates/efs-storageclass.yaml
+++ b/templates/efs-storageclass.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.efs.enabled }}
+{{- if and (.Values.efs.enabled) (not .Values.efs.existingClaim) }}
 kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
