--- a/templates/alb-ingress-controller.yaml
+++ b/templates/alb-ingress-controller.yaml
@@ -1,7 +1,7 @@
 # Application Load Balancer (ALB) Ingress Controller Deployment Manifest.
 # This manifest details sensible defaults for deploying an ALB Ingress Controller.
 # GitHub: https://github.com/kubernetes-sigs/aws-alb-ingress-controller
-{{- if .Values.ingress.enabled }}
+{{- if .Values.ingress.controller }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
