--- a/templates/rbac-role.yaml
+++ b/templates/rbac-role.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ingress.enabled }}
+{{- if .Values.ingress.controller }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
