--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -33,7 +33,7 @@ spec:
         {{- if .Values.efs.enabled }}
         - name: efs
           persistentVolumeClaim:
-            claimName: {{ template "akeneo.fullname" . }}-efs-pvc
+            claimName: {{ .Values.efs.existingClaim | default (printf "%s-efs-pvc" (include "akeneo.fullname" .)) }}
         {{- end }}
       containers:
         - name: php
