--- a/templates/rbac-role.yaml
+++ b/templates/rbac-role.yaml
@@ -36,7 +36,9 @@ rules:
       - get
       - list
       - watch
+{{- end }}
 ---
+{{- if .Values.ingress.controller }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -51,7 +53,9 @@ subjects:
   - kind: ServiceAccount
     name: {{ template "akeneo.fullname" . }}-alb-ingress
     namespace: {{ .Values.ingress.namespace }}
+{{- end }}
 ---
+{{- if .Values.ingress.controller }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
