--- a/Chart.yaml
+++ b/Chart.yaml
@@ -11,3 +11,6 @@ maintainers:
    email: enrico@hevelop.com
  - name: bordeo
    email: alex@hevelop.com
+  - name: marcatos
+   email: simone@hevelop.com
+icon: https://pbs.twimg.com/profile_images/905717568748617728/Vx4-65y2_400x400.jpg
