--- a/templates/php-service.yaml
+++ b/templates/php-service.yaml
@@ -10,4 +10,4 @@ spec:
     tier: {{ template "akeneo.fullname" . }}-frontend
   ports:
   - protocol: TCP
-    port: 9001
+    port: {{ .Values.phpfpm.listenPort }}
