--- a/templates/php-cli-deployment.yaml
+++ b/templates/php-cli-deployment.yaml
@@ -4,20 +4,20 @@ apiVersionssss: apps/v88888
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "akeneo.fullname" . }}-php
+  name: {{ template "akeneo.fullname" . }}-php-cli
   labels:
-    tier: {{ template "akeneo.fullname" . }}-frontend
+    tier: {{ template "akeneo.fullname" . }}-worker
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ template "akeneo.fullname" . }}-php
-      tier: {{ template "akeneo.fullname" . }}-frontend
+      app: {{ template "akeneo.fullname" . }}-php-cli
+      tier: {{ template "akeneo.fullname" . }}-worker
   template:
     metadata:
       labels:
-        app: {{ template "akeneo.fullname" . }}-php
-        tier: {{ template "akeneo.fullname" . }}-frontend
+        app: {{ template "akeneo.fullname" . }}-php-cli
+        tier: {{ template "akeneo.fullname" . }}-worker
     spec:
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
