--- a/templates/cronjob.yml
+++ b/templates/cronjob.yml
@@ -1,3 +1,4 @@
+{{- $akeneo_fullname := include "akeneo.fullname" . }}
 {{- range $job := .Values.jobs }}
 {{- $cron_image := printf "%s/%s:%s" $job.registry $job.repository $job.tag -}}
 {{- if $job.enabled }}
@@ -5,9 +6,9 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: {{ template "akeneo.fullname" . }}-cron-{{ $job.name }}
+  name: {{ $akeneo_fullname }}-cron-{{ $job.name }}
   labels:
-    app: {{ template "akeneo.fullname" . }}-cron-{{ $job.name }}
+    app: {{ $akeneo_fullname }}-cron-{{ $job.name }}
 spec:
   schedule: {{ $job.schedule | quote }}
   successfulJobsHistoryLimit: {{ $job.successfulJobsHistoryLimit }}
@@ -18,7 +19,7 @@ spec:
       template:
         metadata:
           labels:
-            app: {{ template "akeneo.fullname" . }}-cron-{{ $job.name }}
+            app: {{ $akeneo_fullname }}-cron-{{ $job.name }}
         spec:
           {{- if $.Values.pullSecrets }}
           imagePullSecrets:
@@ -27,7 +28,7 @@ spec:
             {{- end}}
           {{- end }}
           containers:
-            - name: {{ template "akeneo.fullname" . }}-cronjob-{{ $job.name }}
+            - name: {{ $akeneo_fullname }}-cronjob-{{ $job.name }}
               image: {{ $cron_image }}
               imagePullPolicy: {{ $job.pullPolicy | quote }}
               command:
@@ -53,7 +54,7 @@ spec:
           {{- if $.Values.efs.enabled }}
           - name: efs
             persistentVolumeClaim:
-              claimName: {{ template "akeneo.fullname" . }}-efs-pvc
+              claimName: {{ $akeneo_fullname }}-efs-pvc
           {{- end }}
           {{- if and $.Values.efs.existingClaim (not $.Values.efs.enabled) }}
           - name: efs
